--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,8 @@
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
 default_envs = mega2560
+#default_envs = Melzi
+#default_envs = LPC1768
 include_dir  = Marlin
 
 #
