--- a/platformio.ini
+++ b/platformio.ini
@@ -19,8 +19,10 @@
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
 default_envs = mega2560
-#default_envs = Melzi
+#default_envs = STM32F103VE_GTM32
+#default_envs = melzi
 #default_envs = LPC1768
+#default_envs = LPC1769
 include_dir  = Marlin
 
 #
