--- a/platformio.ini
+++ b/platformio.ini
@@ -218,6 +218,8 @@ lib_deps           =
 HAS_TFT_LVGL_UI         = lvgl=https://github.com/makerbase-mks/LVGL-6.1.1-MKS/archive/master.zip
                           src_filter=+<src/lcd/extui/lib/mks_ui>
                           extra_scripts=download_mks_assets.py
+USES_YHCB2004           = lvgl=https://github.com/red-scorp/LiquidCrystal_AIP31068/archive/master.zip 
+USES_YHCB2004_DEP       = lvgl= https://github.com/red-scorp/SoftSPIB/archive/master.zip
 MKS_WIFI_MODULE         = QRCode=https://github.com/makerbase-mks/QRCode/archive/master.zip
 HAS_TRINAMIC_CONFIG     = TMCStepper@~0.7.1
                           src_filter=+<src/feature/tmc_util.cpp> +<src/module/stepper/trinamic.cpp> +<src/gcode/feature/trinamic/M122.cpp> +<src/gcode/feature/trinamic/M906.cpp> +<src/gcode/feature/trinamic/M911-M914.cpp>
