A10 Pro early dev

--- a/platformio.ini
+++ b/platformio.ini
@@ -209,7 +209,7 @@ extra_scripts      =
   pre:buildroot/share/PlatformIO/scripts/common-cxxflags.py
   post:buildroot/share/PlatformIO/scripts/common-dependencies-post.py
 build_flags        = -fmax-errors=5 -g -D__MARLIN_FIRMWARE__ -fmerge-constants
-lib_deps           =
+lib_deps           = https://github.com/red-scorp/SoftSPIB/archive/master.zip
 
 #
 # Feature Dependencies
@@ -219,7 +219,6 @@ HAS_TFT_LVGL_UI         = lvgl=https://github.com/makerbase-mks/LVGL-6.1.1-MKS/a
                           src_filter=+<src/lcd/extui/lib/mks_ui>
                           extra_scripts=download_mks_assets.py
 USES_YHCB2004           = lvgl=https://github.com/red-scorp/LiquidCrystal_AIP31068/archive/master.zip 
-USES_YHCB2004_DEP       = lvgl= https://github.com/red-scorp/SoftSPIB/archive/master.zip
 MKS_WIFI_MODULE         = QRCode=https://github.com/makerbase-mks/QRCode/archive/master.zip
 HAS_TRINAMIC_CONFIG     = TMCStepper@~0.7.1
                           src_filter=+<src/feature/tmc_util.cpp> +<src/module/stepper/trinamic.cpp> +<src/gcode/feature/trinamic/M122.cpp> +<src/gcode/feature/trinamic/M906.cpp> +<src/gcode/feature/trinamic/M911-M914.cpp>
