--- a/platformio.ini
+++ b/platformio.ini
@@ -209,7 +209,7 @@ extra_scripts      =
   pre:buildroot/share/PlatformIO/scripts/common-cxxflags.py
   post:buildroot/share/PlatformIO/scripts/common-dependencies-post.py
 build_flags        = -fmax-errors=5 -g -D__MARLIN_FIRMWARE__ -fmerge-constants
-lib_deps           = https://github.com/red-scorp/SoftSPIB/archive/master.zip
+lib_deps           = red-scorp/LiquidCrystal_AIP31068 @ ^1.0.4, red-scorp/SoftSPIB @ ^1.1.1
 
 #
 # Feature Dependencies
@@ -235,7 +235,6 @@ MAX6675_._IS_MAX31865   = Adafruit MAX31865 library@~1.1.0
 USES_LIQUIDCRYSTAL      = LiquidCrystal@1.5.0
 USES_LIQUIDCRYSTAL_I2C  = marcoschwartz/LiquidCrystal_I2C@1.1.4
 USES_LIQUIDTWI2         = LiquidTWI2@1.2.7
-USES_YHCB2004           = lvgl=https://github.com/red-scorp/LiquidCrystal_AIP31068/archive/master.zip 
 HAS_WIRED_LCD           = src_filter=+<src/lcd/lcdprint.cpp>
 HAS_MARLINUI_HD44780    = src_filter=+<src/lcd/HD44780>
 HAS_MARLINUI_U8GLIB     = U8glib-HAL@~0.4.1
