--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,2 @@
-github: [thinkyhead]
-patreon: thinkyhead
-custom: ["https://www.thinkyhead.com/donate-to-marlin"]
+
+custom: ["https://paypal.me/vertabreaker"]
